--- a/calculadora-interes-compuesto/package.json
+++ b/calculadora-interes-compuesto/package.json
@@ -15,7 +15,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled": "^1.0.0",
-    "styled-components": "^6.1.1"
+    "styled-components": "^6.1.1",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
